Made it compile
... and then promptly discovered that the computer I was working on did
not support GLSL version 1.4

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,16 +3,6 @@ cmake_minimum_required(VERSION 2.8)
 PROJECT(Plotter)
 
 #########################################################
-# FIND GLUT
-#########################################################
-find_package(GLUT REQUIRED)
-include_directories(${GLUT_INCLUDE_DIRS})
-link_directories(${GLUT_LIBRARY_DIRS})
-add_definitions(${GLUT_DEFINITIONS})
-if(NOT GLUT_FOUND)
-    message(ERROR " GLUT not found!")
-endif(NOT GLUT_FOUND)
-#########################################################
 # FIND OPENGL
 #########################################################
 find_package(OpenGL REQUIRED)
@@ -22,6 +12,16 @@ add_definitions(${OpenGL_DEFINITIONS})
 if(NOT OPENGL_FOUND)
     message(ERROR " OPENGL not found!")
 endif(NOT OPENGL_FOUND)
+#########################################################
+# FIND GLUT
+#########################################################
+find_package(GLUT REQUIRED)
+include_directories(${GLUT_INCLUDE_DIRS})
+link_directories(${GLUT_LIBRARY_DIRS})
+add_definitions(${GLUT_DEFINITIONS})
+if(NOT GLUT_FOUND)
+    message(ERROR " GLUT not found!")
+endif(NOT GLUT_FOUND)
 #########################################################
 # FIND GLEW
 #########################################################
@@ -33,6 +33,10 @@ if(NOT GLEW_FOUND)
 	message(ERROR " GLEW not found!")
 endif(NOT GLEW_FOUND)
 #########################################################
+# FIND MATH
+#########################################################
+find_library(M_LIB m)
+#########################################################
 # Include Files
 #########################################################
 add_executable(Plotter Plotter.c util.c)
@@ -41,4 +45,4 @@ add_executable(Plotter Plotter.c util.c)
 # Linking & stuff
 #########################################################
 # create the program "Plotter"
-target_link_libraries(Plotter ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} )
+target_link_libraries(Plotter ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${GLEW_LIBRARY} ${M_LIB})
